[package]
name = "hardlink_view"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows-core = "0.61.0"
winreg = "0.55.0"
widestring = "1.2.0"
log = "0.4.27"
#vc-ltl = "5.2.1"

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_UI_Shell_Common",
    "Win32_System_Com_StructuredStorage",
    "Win32_Graphics_Gdi",
    "Win32_System_Ole",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Controls",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
embed-resource = "3.0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
